# RubicsCubeSolverV2

./: CMakeLists.txt  README.md  main.cpp
Modal/: RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp
Solver/: BFSSolver.h  DFSSolver.h  IDDFSSolver.h
